--- a/public/styles/page1.css
+++ b/public/styles/page1.css
@@ -4,20 +4,21 @@
     box-sizing: border-box;
     background-color:black;
 }
-#bandeau > img{
-   
-    left: 0;
-    height: 100px;
-    width: 100px;
-}
+
 #bandeau{
     display: flex;
-}
-#bandeau > h1{
+    img{
+        height: 100px;
+        width: 100px;
+    }
+    h1{
     
-    margin-left: 580px;
-    align-items: center;
+        margin-left: 580px;
+        align-items: center;
+        color: #ffffff;
+    }
 }
+
 
 #navbar {
     padding: 1% 3% 1%;
@@ -25,31 +26,36 @@
     justify-content: space-between;
     background-color: #312E2E;
     font-size:25px;
-}
-    #navbar > div{
+    div{
         background-color: #312E2E;
+        span {
+            color: white; /* Changer la couleur du texte pour qu'il soit visible sur le fond noir */
+            background-color: #312E2E;
+        }
     }
-#navbar > div > span {
-    color: white; /* Changer la couleur du texte pour qu'il soit visible sur le fond noir */
-    background-color: #312E2E;
+    #recherche{
+        display: flex;
+        #site-search{
+            color : white;
+        }
+        button{
+            display: block;
+            background-color: red;
+            border-radius: 10px;
+            /*border: 4px double #1f69ec;*/
+            color: #ffffff;
+            text-align: center;
+            font-size: 20px;
+            padding: 5px;
+            width: 150px;
+            cursor: pointer;
+        
+        }
+    }
 }
 
-#recherche{
-    display: flex;
-}
-.bouton{
-    display: block;
-    background-color: red;
-    border-radius: 10px;
-    /*border: 4px double #1f69ec;*/
-    color: #ffffff;
-    text-align: center;
-    font-size: 20px;
-    padding: 5px;
-    width: 150px;
-    cursor: pointer;
 
-}
+
 #articles{
     display: flex;
     justify-content: space-around;
