--- a/public/styles/page1.css
+++ b/public/styles/page1.css
@@ -54,6 +54,9 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     div{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         height: 600px;
         margin: 10px;
         background-color: #f9f9f9;
@@ -61,7 +64,10 @@
         border-radius: 5px;
         padding: 10px;
         img{
-            width: 95%;
+            width: 90%;
+        }
+        h2{
+            text-align: center;
         }
        }
     }
