--- a/public/styles/page1.css
+++ b/public/styles/page1.css
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+body{
+
 }
 
 #bandeau{
@@ -12,8 +17,7 @@
     }
     h1{
     
-        margin-left: 580px;
-        align-items: center;
+        margin: auto;
     }
 }
 
@@ -56,21 +60,52 @@
     div{
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: start;
         height: 600px;
         margin: 10px;
         background-color: #f9f9f9;
         border: 1px solid #ccc;
         border-radius: 5px;
-        padding: 10px;
+        
+        
+        
         img{
-            width: 90%;
+            width: 100%;
+            border-radius: 5px;
+
         }
-        h2{
+        .movieTitle{
+            margin: 10px auto 0px;
             text-align: center;
         }
-       }
+        .movieDate{
+            margin: 10px 0px 0px 20px;
+        }
+        .movieResume{
+            margin: 10px 20px 10px 20px;
+            height: fit-content;
+            overflow: auto;
+
+
+            &::-webkit-scrollbar {
+
+                width: 2px;
+            }
+                
+            &::-webkit-scrollbar-track {
+                
+                background-color: gray; 
+            }
+                
+            &::-webkit-scrollbar-thumb {
+                
+                background-color: black;
+            }
+                
+        }
     }
+}
+    
 
  @media screen and (min-width: 768px) {
     #tuiles{
@@ -89,4 +124,3 @@
     }
    }
 
-   
