--- a/public/styles/page1.css
+++ b/public/styles/page1.css
@@ -11,6 +11,7 @@ body{
 
 #bandeau{
     display: flex;
+    height: 100px;
     img{
         height: 100px;
         width: 100px;
@@ -25,34 +26,83 @@ body{
 #navbar {
     padding: 1% 3% 1%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     background-color: #312E2E;
     font-size:25px;
-    div{
-        background-color: #312E2E;
-        span {
-            color: white; /* Changer la couleur du texte pour qu'il soit visible sur le fond noir */
-            background-color: #312E2E;
-        }
-    }
+    
     #recherche{
         display: flex;
+        input{
+            border-radius: 10px;
+            border: 0px;
+            margin-right: 5px;
+        }
         button{
             display: block;
             background-color: red;
             border-radius: 10px;
-            /*border: 4px double #1f69ec;*/
+            border: 0px;
             color: #ffffff;
             text-align: center;
             font-size: 20px;
             padding: 5px;
-            width: 150px;
+            width: fit-content;
             cursor: pointer;
         
         }
     }
 }
 
+
+#filtres{
+    background-color: #312E2E;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    padding-bottom: 10px;
+
+    form{
+        display: flex;
+        flex-direction: column;
+        .filter-group{
+            margin: 5px 0px;
+            display: grid;
+            grid-template-columns: 1fr 2fr;
+            label{
+                margin-right: 5px;
+            }
+            input{
+                width: 150px;
+                border-radius: 3px;
+                border: none;
+
+                
+            }
+            select{
+                width: 150px;
+                border-radius: 3px;
+                border: none;
+            };   
+        }
+        .boutton{
+            display: flex;
+            margin: auto;
+            #apply-filters{
+                margin-top: 5px;
+                display: block;
+                background-color: red;
+                border-radius: 10px;
+                border: none;
+                color: white;
+                padding: 5px;
+                text-align: center;
+                width: fit-content;
+                cursor: pointer;
+            }
+        }
+    }    
+}
 
  #tuiles{
     display: grid;
