--- a/public/styles/page1.css
+++ b/public/styles/page1.css
@@ -5,9 +5,7 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-body{
 
-}
 
 #bandeau{
     display: flex;
@@ -155,7 +153,22 @@ body{
         }
     }
 }
-    
+
+
+#load-more{
+    background-color: #312E2E;
+    border-radius: 5px;
+    border: none;
+    color: #ffffff;
+    text-align: center;
+    font-size: 20px;
+    padding: 3px;
+    width: fit-content;
+    cursor: pointer;
+    margin: auto;
+    margin-bottom: 10px;
+}
+
 
  @media screen and (min-width: 768px) {
     #tuiles{
